# WebSite-Blog

./: README.md  pyproject.toml
src/about/: urls.py  views.py
src/about/templates/about/: about.html
src/articles/: admin.py  mixins.py  models.py  services.py  urls.py  utils.py  views.py
src/articles/migrations/: 0001_initial.py  0002_article_slug.py  0003_remove_article_views_count_viewcount.py  0004_alter_viewcount_ip_address.py  0005_alter_viewcount_options_and_more.py  0006_image_article_is_published_alter_article_content.py
src/articles/static/css/: articles.css  home.css
src/articles/static/js/: articles.js
src/articles/templates/articles/: article.html  articles.html  home.html
src/config/: settings.py  urls.py
src/home/: urls.py  views.py
src/home/templates/home/: home.html
src/mailing/: admin.py  forms.py  models.py  urls.py  views.py
src/mailing/migrations/: 0001_initial.py
src/mailing/templates/mailing/: contact_form.html
src/mailing/templatetags/: mailing_tags.py
src/static/css/: style.css
src/templates/: base.html
src/templates/inc/: _navbar.html
