[tool.poetry]
name = "website-blog"
version = "0.1.0"
description = ""
authors = ["Yevgeniy Kap <kapustaevg@gmail.com>"]
readme = "README.md"
packages = [{include = "website_blog"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
pydantic-settings = "^2.0.2"
psycopg = "^3.1.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
